# GamingHaven

./: .gitignore  README.md  cli.py  jogos.json  main.py  pyproject.toml  settings.json
dominio/: JogoConsole.py  classAvaliavelMixin.py  classJogo.py  jogoMobile.py  jogoPc.py
src/gamingHaven/: cli.py  main.py
src/gamingHaven/dados/: repositorio_json.py
src/gamingHaven/dominio/: Colecao.py  JogoConsole.py  classAvaliavelMixin.py  classJogo.py  filtros.py  gerenciador_colecao.py  jogoMobile.py  jogoPc.py  relatorios.py
