[project]
name = "gaminghaven"
version = "0.1.0"
description = "Catalogo pessoal de jogos digitais"
authors = [
    {name = "Joenio_Araujo",email = "joenio04araujo@gmail.com"}
]
packages = [{ include = "gaminghaven", from = "src" }]
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
catalogo = "gaminghaven.cli:main"

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
