[tool.poetry]
name = "gamingHaven"
version = "0.1.0"
description = "Catalogo pessoal de jogos digitais"
authors = ["Joenio_Araujo <joenio04araujo@gmail.com>"]
readme = "README.md"
packages = [{include = "gamingHaven", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
catalogo = "gaminghaven.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"